<resources>
    <string name="app_name">HashitaqAlquds</string>
    <string name="apiKey" translatable="false">AIzaSyC8R1QmcxOQTFMVhS2xjuJjUTDNZhZtIyE</string>


    <string name="title_splash">القدسُ عاصمة فلسطين الأبدية</string>
    <string name="w1">القدس أرضي.. القدس عرضي.. القدس أيامي وأحلامي النديــة.. يا من قتلتم أنبياء الله الأتقيــاء.. يا من تربيتم على سفك الدمــاء.. الذل مكتـوب عليكم والشقـــــاء.</string>
    <string name="w2">القدس ليست خيمة عربية ضاعت فردد شاعر أنفاسها.. القدس ليست قصة وهمية تذرو الرياح الذاريات كلامها.. القدس تولد من هنا شمسها ومن الروابي يحتسين ضرامها ومن العقول وقد تبلج نورها ومن الحضارة ركزت أعلامها.</string>
    <string name="w3">يا بني صهيون يا شر البريــة القدس ليست وكركم.. القدس تأبى جمعكم.. القدس تلفظ رجسكم.. فالقدس يا أنجاس عذراء تقية.. القدس يا أدناس طاهرة نقية.</string>
    <string name="w4">لشيخ جراح هي قرية مقدسية - فلسطينية تتبع لمحافظة القدس وهي في الجانب الشرقي لمدينة القدس الذي وقع تحت الاحتلال الإسرائيلي في حرب 1967. وهي الآن من أحياء القدس الشرقية.اخذ حي الشيخ جراح بالقدس اسمه، من الأمير حسام الدين بن شرف الدين عيسى الجراحي، طبيب صلاح الدين الأيوبي، القائد الكردي المسلم، الذي تحول إلى رمز لأجيال عربية متعاقبة منذ نحو 900 عاما، ويتهدده الآن مخطط إسرائيلي استيطاني تم الإعلان عنه ويتضمن بناء 200 وحدة سكنية لاسكان مستوطنين يهود فيها، وسط هذا الحي العربي الواقع في القدس الشرقية المحتلة عام 1967م.</string>
    <string name="txtSignIn">تسجيل دخول</string>
    <string name="txtSignUp">انشاء حساب جديد</string>
    <string name="txtGest">الدخول كزائر</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="landmark">معالم القدس</string>
    <string name="map">الخريطة</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="setting">الاعدادات</string>
    <string name="email">البريد الالكتروني</string>
    <string name="phoneNumber">رقم الجوال</string>
    <string name="name">الاسم كامل</string>
    <string name="password">كلمة السر</string>
    <string name="forGotPassword">هل نسيت كلمة المرور ؟</string>
    <string name="createAccount">لا يوجد عندك حساب؟ يمكنك انشاء حساب</string>
    <string name="doYouHaveAccount">هل يوجد لديك حساب؟ قم بتسجل دخول</string>
    <string name="addPost">نشر منشور</string>
    <string name="selectHashtag">اختر هشتاق</string>
    <string name="contentPost">محتوى المنشور</string>
    <string name="share">مشاركة</string>
    <string name="txtHS">#القدس _عاصمة_فلسطين</string>
    <string name="like">اعجاب</string>
    <string name="comment">تعليق</string>
    <string name="field_required">الحقل مطلوب</string>
    <string name="error_email">الرجاء ادخال بريد الكتورني صالح</string>
    <string name="password_error">كلمة المرور ضعيفة</string>
    <string name="error_phone">الرجاء ادخال رقم هاتف صالح</string>
    <string name="error_post">يجب عليك اضافة نص او صورة</string>

    <string name="editProfile">تعديل الملف الشخصي</string>
    <string name="theme">تغيرات سمات التطبيق</string>
    <string name="aboutApp">حول التطبيق</string>
    <string name="logOut">تسجل خروج</string>


    <string name="main_channel">Notification Channel</string>
    <string name="main_channel_description">Description Notification</string>

    <string-array name="data">
        <item>القدس_عاصمة_فلسطين</item>
        <item>انقذو_حي_الشيخ_جراح</item>
        <item>غزة_تنتصر</item>
        <item>اسرائيل_زائلة</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_change">حفظ التغيرات</string>
    <string name="note">نبذة</string>
    <string name="enterComment">اكتب تعليق</string>
    <string name="comments">التعليقات</string>
</resources>