<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:text="@string/addPost"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp"
                android:text="@string/selectHashtag"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Spinner
                android:id="@+id/listCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:background="@drawable/bg_selection"
                android:entries="@array/data"
                android:padding="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16sdp"
                android:textColorHint="@color/textColor"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="@color/input_box_tint"
                app:hintEnabled="false"
                app:hintTextColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="@+id/listCategories"
                app:layout_constraintStart_toStartOf="@+id/listCategories"
                app:layout_constraintTop_toBottomOf="@+id/listCategories">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/contentPost"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:textCursorDrawable="@drawable/shape_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16sdp"
                android:src="@drawable/ic_photo"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:src="@drawable/ic_video"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:src="@drawable/ic_file"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginVertical="@dimen/_24sdp"
                android:backgroundTint="@color/green_900"
                android:text="@string/share"
                android:textSize="@dimen/_20sdp"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintWidth_percent="0.9" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
                app:layout_constraintStart_toStartOf="@+id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>